Commit20
-cities directory added for search advertisements based on their cities