@@ -4,7 +4,6 @@ import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
 
 public class Profile {
@@ -120,14 +119,13 @@ public class Profile {
     }
 
     private void editUserFile(String baseAddress,String key,String old, String New) throws IOException {
-        List<String> fileContent = new ArrayList<>(Files.readAllLines(Paths.get(baseAddress), StandardCharsets.UTF_8));
+        List<String> fileContent = new ArrayList<>(Files.readAllLines(Path.of(baseAddress), StandardCharsets.UTF_8));
         for (int i = 0; i < fileContent.size(); i++) {
-            System.out.println(fileContent.get(i));
             if (fileContent.get(i).equals(key+old)) {
                 fileContent.set(i,(key+New));
                 break;
             }
         }
-        Files.write(Paths.get(baseAddress), fileContent, StandardCharsets.UTF_8);
+        Files.write(Path.of(baseAddress), fileContent, StandardCharsets.UTF_8);
     }
 }
